--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,12 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id "org.jetbrains.kotlin.kapt"
 }
 
 android {
     namespace 'com.example.simpletodo'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.simpletodo"
@@ -77,9 +78,14 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
 
-    def room_version = "2.4.3"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
+//    def room_version = "2.4.3"
+//    implementation "androidx.room:room-runtime:$room_version"
+//    implementation "androidx.room:room-ktx:$room_version"
+
+    //dependencies for room
+     implementation("androidx.room:room-runtime:2.5.1")
+     kapt "androidx.room:room-compiler:2.5.1"
+     kapt "android.arch.persistence.room:compiler:1.1.1"
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.5.2"
